finished links in modals. Layout tweaks

--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 
   <link rel="stylesheet" href="style.css">
@@ -33,14 +31,15 @@
           <a class="link is-info" href="https://www.linkedin.com/in/dustinlamarr/">LinkedIn</a>
         </p>
         <p class="level-item has-text-centered">
-          <a class="link is-info">Contact</a>
+          <a class="link is-info" href="./">About Me</a>
         </p>
       </nav>
-      <div class="tile is-ancestor">
-        <div class="tile is-vertical">
 
-          <div class="tile is-parent has-background-success-dark">
-            <article class="tile is-child notification is-vcentered has-background-success-dark">
+      <div class="container">
+        <div class="columns">
+
+          <div class="column is-half has-background-success-dark">
+            <article class="tile is-parent is-vcentered has-background-success-dark">
               <div class="columns box is-centered">
                 <div class="box">
                   <div class="column is-vcentered">
@@ -55,74 +54,90 @@
                 </div>
               </div>
             </article>
-
-            <div class="tile is-parent has-background-success-dark">
-              <article class="tile is-child notification is-vcentered has-background-success-dark">
-                <div class="columns box is-centered">
-                  <div class="box">
-                    <div class="column is-vcentered">
-                      <p class="title has-text-success-dark has-text-centered">Code Quiz</p>
-                    </div>
-                    <div class="column is-vcentered">
-                      <img src="./Assets/code-quiz.png">
-                      <div class="buttons is-centered">
-                        <button class="button is-success is-light is-centered" id="codequiz-info">Get Info</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </article>
-            </div>
           </div>
 
-          <div class="tile is-parent has-background-success-dark">
-            <article class="tile is-child notification is-vcentered has-background-success-dark">
-              <div class="columns box mr-2">
-                <div class="column box is-vcentered mt-5">
-                  <p class="title has-text-success-dark has-text-centered pt-6">Day Planner: Plan Your Day</p>
-                </div>
-                <div class="column is-vcentered mt-6">
-                  <img src="./Assets/day-planner.png">
-                  <div class="buttons is-centered">
-                    <button class="button is-success is-light is-centered" id="dayplanner-info">Get Info</button>
+          <div class="column is-half has-background-success-dark">
+            <article class="tile is-parent is-vcentered has-background-success-dark">
+              <div class="columns box is-centered">
+                <div class="box">
+                  <div class="column is-vcentered">
+                    <p class="title has-text-success-dark has-text-centered">Code Quiz</p>
                   </div>
-                </div>
-              </div>
-            </article>
-
-            <article class="tile is-child notification is-vcentered has-background-success-dark">
-              <div class="columns box mr-2">
-                <div class="column box is-vcentered mt-5">
-                  <p class="title has-text-success-dark has-text-centered pt-6">Weather Dad</p>
-                </div>
-                <div class="column is-vcentered mt-6">
-                  <img src="./Assets/weather-dad.png">
-                  <div class="buttons is-centered">
-                    <button class="button is-success is-light is-centered" id="weatherdad-info">Get Info</button>
-                  </div>
-                </div>
-              </div>
-            </article>
-          </div>
-
-          <div class="tile is-parent has-background-success-dark">
-            <article class="tile is-child notification is-vcentered has-background-success-dark">
-              <div class="columns box mr-2">
-                <div class="column box is-vcentered mt-5">
-                  <p class="title has-text-success-dark has-text-centered pt-6 is-vcentered">Binger</p>
-                </div>
-                <div class="column is-vcentered mt-6">
-                  <img src="./Assets/binger.png">
-                  <div class="buttons is-centered">
-                    <button class="button is-success is-light is-centered" id="binger-info">Get Info</button>
+                  <div class="column is-vcentered">
+                    <img src="./Assets/code-quiz.png">
+                    <div class="buttons is-centered">
+                      <button class="button is-success is-light is-centered" id="codequiz-info">Get Info</button>
+                    </div>
                   </div>
                 </div>
               </div>
             </article>
           </div>
         </div>
+
+        <div class="columns">
+
+          <div class="column is-half has-background-success-dark">
+            <article class="tile notification is-vcentered has-background-success-dark">
+              <div class="columns box is-centered">
+                <div class="box">
+                  <div class="column is-vcentered">
+                    <p class="title has-text-success-dark has-text-centered">Day Planner: Plan Your Day</p>
+                  </div>
+                  <div class="column is-vcentered">
+                    <img src="./Assets/day-planner.png">
+                    <div class="buttons is-centered">
+                      <button class="button is-success is-light is-centered" id="dayplanner-info">Get Info</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </article>
+          </div>
+
+          <div class="column is-half has-background-success-dark">
+
+            <article class=" column tile notification is-vcentered has-background-success-dark">
+              <div class="columns box is-centered">
+                <div class="box">
+                  <div class="column is-vcentered">
+                    <p class="title has-text-success-dark has-text-centered">Weather Dad</p>
+                  </div>
+                  <div class="column is-vcentered">
+                    <img src="./Assets/weather-dad.png">
+                    <div class="buttons is-centered">
+                      <button class="button is-success is-light is-centered" id="weatherdad-info">Get Info</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </article>
+          </div>
+        </div>
+
+        <div class="columns">
+
+          <div class="column has-background-success-dark">
+            <article class="tile notification is-vcentered has-background-success-dark">
+              <div class="columns box is-centered">
+                <div class="box">
+                  <div class="column is-vcentered">
+                    <p class="title has-text-success-dark has-text-centered">Binger</p>
+                  </div>
+                  <div class="column is-vcentered">
+                    <img src="./Assets/binger.png">
+                    <div class="buttons is-centered">
+                      <button class="button is-success is-light is-centered" id="binger-info">Get Info</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+          </article>
+        </div>
       </div>
     </div>
+
   </section>
 
   <div class="modal" id="modal">
@@ -132,18 +147,18 @@
           <header class="level">
             <p class="modal-card-title level-item" id="modal-title"></p>
             <div class="level-right">
-            <button class="delete level-item" aria-label="close"></button>
-          </div>
+              <button class="delete level-item" aria-label="close"></button>
+            </div>
           </header>
           <section class="modal-card-body">
             <div class="columns">
               <div class="column is-full block has-text-success-dark" id="project-info"></div>
             </div>
-              <div class="columns">
+            <div class="columns">
               <div class="column is-full" id="project-gif"></div>
             </div>
             <div class="columns">
-              <div class="column is-centered box"><a id="live-site"></a></div>
+              <div class="column is-centered"><a id="live-site"></a></div>
             </div>
             <div class="columns">
               <div class="column is-full"><a id="repo-link"></a></div>
@@ -151,8 +166,8 @@
           </section>
           <footer class="level">
             <div class="level-right">
-            <button class="button level-item" id="cancel-button">Close</button>
-          </div>
+              <button class="button level-item" id="cancel-button">Close</button>
+            </div>
           </footer>
         </div>
       </div>
