--- a/index.html
+++ b/index.html
@@ -18,37 +18,42 @@
   <section class="section">
     <div class="container">
       <nav class="level">
-        <p class="level-item has-text-centered">
+        <div class="level-left">
+        <p class="level-item has-text-left">
           <img src="./Assets/deez.png" alt="" style="height: 80px;">
         </p>
-        <p class="level-item has-text-centered">
-          <a class="link is-info">Resume</a>
+        <p class="level-item has-text-left">
+          <a class="link is-info pr-4 has-text-danger-dark" href="https://www.dropbox.com/s/n0bnq1trg0j8oop/DL-Dev.pdf?dl=0">Resume</a>
         </p>
-        <p class="level-item has-text-centered">
-          <a class="link is-info" href="https://github.com/dustin-lamarr">GitHub</a>
+      
+        <p class="level-item has-text-left">
+          <a class="link is-info has-text-danger-dark" href="" >About Me</a>
         </p>
-        <p class="level-item has-text-centered">
-          <a class="link is-info" href="https://www.linkedin.com/in/dustinlamarr/">LinkedIn</a>
+      </div>
+      <div class="level-right">
+        <p class="level-item has-text-left">
+          <a class="link is-info has-text-danger-dark" href="https://github.com/dustin-lamarr">GitHub</a>
         </p>
-        <p class="level-item has-text-centered">
-          <a class="link is-info" href="./">About Me</a>
+        <p class="level-item has-text-left">
+          <a class="link is-info pl-4 has-text-danger-dark" href="https://www.linkedin.com/in/dustinlamarr/">LinkedIn</a>
         </p>
+      </div>
       </nav>
 
       <div class="container">
         <div class="columns">
 
-          <div class="column is-half has-background-success-dark">
-            <article class="tile is-parent is-vcentered has-background-success-dark">
-              <div class="columns box is-centered">
+          <div class="column is-half has-background-primary-dark">
+            <article class="tile is-parent is-vcentered has-background-primary-dark">
+              <div class="columns box is-centered has-background-primary-light">
                 <div class="box">
                   <div class="column is-vcentered">
-                    <p class="title has-text-success-dark has-text-centered">P4s$g3N</p>
+                    <p class="title has-text-danger-dark has-text-centered">P4s$g3N</p>
                   </div>
                   <div class="column is-vcentered">
                     <img src="./Assets/password-gen.png">
                     <div class="buttons is-centered">
-                      <button class="button is-success is-light is-centered" id="passgen-info">Get Info</button>
+                      <button class="button is-primary is-light is-centered has-text-danger-dark" id="passgen-info">Get Info</button>
                     </div>
                   </div>
                 </div>
@@ -56,17 +61,17 @@
             </article>
           </div>
 
-          <div class="column is-half has-background-success-dark">
-            <article class="tile is-parent is-vcentered has-background-success-dark">
-              <div class="columns box is-centered">
+          <div class="column is-half has-background-primary-dark">
+            <article class="tile is-parent is-vcentered has-background-primary-dark">
+              <div class="columns box is-centered has-background-primary-light">
                 <div class="box">
                   <div class="column is-vcentered">
-                    <p class="title has-text-success-dark has-text-centered">Code Quiz</p>
+                    <p class="title has-text-danger-dark has-text-centered">Code Quiz</p>
                   </div>
                   <div class="column is-vcentered">
                     <img src="./Assets/code-quiz.png">
                     <div class="buttons is-centered">
-                      <button class="button is-success is-light is-centered" id="codequiz-info">Get Info</button>
+                      <button class="button is-primary is-light is-centered has-text-danger-dark" id="codequiz-info">Get Info</button>
                     </div>
                   </div>
                 </div>
@@ -77,17 +82,17 @@
 
         <div class="columns">
 
-          <div class="column is-half has-background-success-dark">
-            <article class="tile notification is-vcentered has-background-success-dark">
-              <div class="columns box is-centered">
+          <div class="column is-half has-background-primary-dark">
+            <article class="tile notification is-vcentered has-background-primary-dark">
+              <div class="columns box is-centered has-background-primary-light">
                 <div class="box">
                   <div class="column is-vcentered">
-                    <p class="title has-text-success-dark has-text-centered">Day Planner: Plan Your Day</p>
+                    <p class="title has-text-danger-dark has-text-centered">Day Planner: Plan Your Day</p>
                   </div>
                   <div class="column is-vcentered">
                     <img src="./Assets/day-planner.png">
                     <div class="buttons is-centered">
-                      <button class="button is-success is-light is-centered" id="dayplanner-info">Get Info</button>
+                      <button class="button is-primary is-light is-centered has-text-danger-dark" id="dayplanner-info">Get Info</button>
                     </div>
                   </div>
                 </div>
@@ -95,18 +100,18 @@
             </article>
           </div>
 
-          <div class="column is-half has-background-success-dark">
+          <div class="column is-half has-background-primary-dark">
 
-            <article class=" column tile notification is-vcentered has-background-success-dark">
-              <div class="columns box is-centered">
+            <article class=" column tile notification is-vcentered has-background-primary-dark">
+              <div class="columns box is-centered has-background-primary-light">
                 <div class="box">
                   <div class="column is-vcentered">
-                    <p class="title has-text-success-dark has-text-centered">Weather Dad</p>
+                    <p class="title has-text-danger-dark has-text-centered">Weather Dad</p>
                   </div>
                   <div class="column is-vcentered">
                     <img src="./Assets/weather-dad.png">
                     <div class="buttons is-centered">
-                      <button class="button is-success is-light is-centered" id="weatherdad-info">Get Info</button>
+                      <button class="button is-primary is-light is-centered has-text-danger-dark" id="weatherdad-info">Get Info</button>
                     </div>
                   </div>
                 </div>
@@ -116,18 +121,17 @@
         </div>
 
         <div class="columns">
-
-          <div class="column has-background-success-dark">
-            <article class="tile notification is-vcentered has-background-success-dark">
-              <div class="columns box is-centered">
+          <div class="column has-background-primary-dark">
+            <article class="tile notification is-vcentered has-background-primary-dark">
+              <div class="columns box is-centered has-background-primary-light">
                 <div class="box">
                   <div class="column is-vcentered">
-                    <p class="title has-text-success-dark has-text-centered">Binger</p>
+                    <p class="title has-text-danger-dark has-text-centered">Binger</p>
                   </div>
                   <div class="column is-vcentered">
                     <img src="./Assets/binger.png">
                     <div class="buttons is-centered">
-                      <button class="button is-success is-light is-centered" id="binger-info">Get Info</button>
+                      <button class="button is-primary is-light is-centered has-text-danger-dark" id="binger-info">Get Info</button>
                     </div>
                   </div>
                 </div>
@@ -150,18 +154,18 @@
               <button class="delete level-item" aria-label="close"></button>
             </div>
           </header>
-          <section class="modal-card-body">
+          <section class="modal-card-body" style="border:gray; border-width: 2px;">
             <div class="columns">
-              <div class="column is-full block has-text-success-dark" id="project-info"></div>
+              <div class="column is-full block has-text-primary-dark" id="project-info"></div>
             </div>
             <div class="columns">
               <div class="column is-full" id="project-gif"></div>
             </div>
             <div class="columns">
-              <div class="column is-centered"><a id="live-site"></a></div>
+              <div class="column is-centered"><a id="live-site" class="has-text-danger-dark"></a></div>
             </div>
             <div class="columns">
-              <div class="column is-full"><a id="repo-link"></a></div>
+              <div class="column is-full"><a id="repo-link" class="has-text-danger-dark"></a></div>
             </div>
           </section>
           <footer class="level">
